--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'java'
+    id 'net.ltgt.apt' version '0.20'
 }
 
 group = 'com.oocl'
@@ -19,6 +20,7 @@ repositories {
 }
 
 dependencies {
+    compile group: 'org.flywaydb', name: 'flyway-core', version: '6.5.3'
     implementation 'org.springframework.boot:spring-boot-starter-web:2.3.1.RELEASE'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa:2.3.1.RELEASE'
     compileOnly 'org.projectlombok:lombok'
@@ -27,6 +29,10 @@ dependencies {
     testImplementation('org.springframework.boot:spring-boot-starter-test') {
         exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
     }
+    runtime group: 'com.h2database', name: 'h2', version: '1.3.148'
+    compile group: 'com.alibaba', name: 'fastjson', version: '1.2.73'
+    compile 'org.mapstruct:mapstruct:1.3.1.Final'
+    compile 'org.mapstruct:mapstruct-processor:1.3.1.Final'
 }
 
 test {
